test: cover bayesian core domain