@@ -2,7 +2,7 @@ package com.lia.liaprove.application.services.algorithms.bayesian;
 
 import com.lia.liaprove.core.algorithms.bayesian.BayesianConfig;
 import com.lia.liaprove.application.gateways.algorithms.bayesian.BayesianGateway;
-import com.lia.liaprove.core.algorithms.bayesian.QuestionFeedbackSummary;
+import com.lia.liaprove.core.algorithms.bayesian.QuestionVoteSummary;
 import com.lia.liaprove.core.algorithms.bayesian.ScoredQuestion;
 import com.lia.liaprove.core.domain.question.Question;
 import com.lia.liaprove.core.domain.question.RelevanceLevel;
@@ -18,8 +18,7 @@ import java.util.stream.Collectors;
  *
  * Responsabilidades:
  * - Agregar sinais (feedbacks, uso da questão, relevância fornecida pela LLM, métricas do recruiter)
- *   e calcular uma pontuação normalizada [0..1] que representa a probabilidade de uma questão ser
- *   aprovada / recomendada para um determinado recruiter.
+ *   e calcular uma pontuação normalizada [0..1] para recomendar uma questão a um recruiter.
  * - Sugerir questões ordenadas por essa pontuação para um recruiter.
  *
  * Fórmula de exemplo (heurística):
@@ -31,13 +30,13 @@ import java.util.stream.Collectors;
  * Campos do domínio:
  * - Question.getRecruiterUsageCount()                         -> int
  * - Question.getRelevanceByLLM()                              -> RelevanceLevel type 1..5
- * - QuestionFeedbackSummary.getWeightedUp()/getWeightedDown() -> int
+ * - QuestionVoteSummary.getWeightedUp()/getWeightedDown() -> int
  * - UserRecruiter.getRecruiterRating()                        -> float
  *
  * Observações:
  * - A agregação de votos (pesos por usuário) deve ser feita preferencialmente pela camada de infra
- *   via {@code BayesianGateway#getFeedbackSummaryForQuestion(...)} para evitar varreduras desnecessárias.
- * - Constrói um mapa de recruiters uma vez por operação (melhora performance).
+ *   via {@code BayesianGateway#getVoteSummaryForQuestion(...)} para evitar varreduras desnecessárias.
+ * - Constrói um mapa de recruiters uma vez por operação de sugestão (melhora performance).
  * - Normaliza corretamente RelevanceLevel (1..5 -> 0..1).
  */
 public class BayesianNetworkUseCaseImpl implements BayesianNetworkUseCase {
@@ -50,43 +49,10 @@ public class BayesianNetworkUseCaseImpl implements BayesianNetworkUseCase {
     }
 
     /**
-     * Calcula a probabilidade (score 0..1) de uma questão {@code q} ser aprovada/indicada para um recruiter.
-     *
-     * Este método prepara o contexto (ex.: mapa de recruiters) e delega a lógica real para
-     * {@link #probabilityQuestionApprovedInternal(Question, UUID, Map)}.
-     *
-     * @param q          questão a ser avaliada (não nula)
-     * @param recruiterId id do recruiter para contexto (pode influenciar peso via engagement)
-     * @return score normalizado no intervalo [0.0, 1.0]
-     */
-    @Override
-    public double probabilityQuestionApproved(Question q, UUID recruiterId) {
-        // Recupera um Map de recrutadores uma única vez
-        Map<UUID, UserRecruiter> recruiterMap = buildRecruiterMap();
-        return probabilityQuestionApprovedInternal(q, recruiterId, recruiterMap);
-    }
-
-    /**
-     * Constrói um mapa imutável de recruiters (id -> UserRecruiter) consultando o provider.
-     * Retorna um mapa vazio se não houver recruiters.
-     *
-     * Útil para evitar chamadas repetidas ao provider quando avaliamos várias questões.
-     *
-     * @return mapa id -> UserRecruiter (pode ser vazio)
-     */
-    private Map<UUID, UserRecruiter> buildRecruiterMap() {
-        List<UserRecruiter> recruiters = provider.getAllRecruiters();
-        if (recruiters == null || recruiters.isEmpty()) return Collections.emptyMap();
-        return recruiters.stream()
-                .filter(Objects::nonNull)
-                .collect(Collectors.toMap(UserRecruiter::getId, r -> r));
-    }
-
-    /**
-     * Implementação interna do cálculo de probabilidade para uma questão.
+     * Implementação interna do cálculo de score para uma questão.
      *
      * Passos principais:
-     * 1) obtém resumo de feedbacks (QuestionFeedbackSummary) via gateway;
+     * 1) obtém resumo de votos (QuestionVoteSummary) via gateway;
      * 2) computa razão de up-votes com smoothing (Laplace);
      * 3) normaliza campos (relevância LLM, uso da questão, engagement do recruiter);
      * 4) combina os sinais com pesos definidos em {@code BayesianConfig} e retorna o score.
@@ -96,9 +62,8 @@ public class BayesianNetworkUseCaseImpl implements BayesianNetworkUseCase {
      * @param recruiterMap mapa id->UserRecruiter para lookup (pode ser vazio)
      * @return score no intervalo [0.0,1.0]
      */
-    private double probabilityQuestionApprovedInternal(Question q, UUID recruiterId, Map<UUID, UserRecruiter> recruiterMap) {
-        // 1) Feedback Summary (agregado)
-        QuestionFeedbackSummary summary = provider.getFeedbackSummaryForQuestion(q.getId());
+    private double scoreQuestionForRecruiter(Question q, UUID recruiterId, Map<UUID, UserRecruiter> recruiterMap) {
+        QuestionVoteSummary summary = provider.getVoteSummaryForQuestion(q.getId());
 
         // Valores ponderados fornecidos pela infra
         double upRatio = computeUpVoteRatio(summary);
@@ -112,7 +77,7 @@ public class BayesianNetworkUseCaseImpl implements BayesianNetworkUseCase {
         double normalizedRecEngagement = recruiter == null ? 0.0 : safeClamp(recruiter.getRecruiterEngagementScore(), 0.0, 1.0);
 
         // 5) Question usage (contador por questão)
-        int usageRaw = safeInt(q.getRecruiterUsageCount());
+        int usageRaw = q.getRecruiterUsageCount();
         double normalizedUsage = normalize(usageRaw, 0, config.getMaxUsageForNormalization());
 
         // 6) Combinação ponderada (normaliza pesos do config para somarem 1)
@@ -130,7 +95,7 @@ public class BayesianNetworkUseCaseImpl implements BayesianNetworkUseCase {
                 + wUp    * upRatio
                 + wRec   * normalizedRecEngagement;
 
-        return Math.max(0.0, Math.min(1.0, score));
+        return Math.clamp(score, 0.0, 1.0);
     }
 
     /**
@@ -142,10 +107,10 @@ public class BayesianNetworkUseCaseImpl implements BayesianNetworkUseCase {
      * - aplica Laplace smoothing com alpha vindo de config: (up + alpha) / (up + down + 2*alpha)
      * - se denom <= 0 (situação anômala) retorna 0.5 como neutro.
      *
-     * @param summary resumo de feedbacks (pode ser null)
+     * @param summary resumo de votos (pode ser null)
      * @return upRatio no intervalo [0.0, 1.0]
      */
-    private double computeUpVoteRatio(QuestionFeedbackSummary summary) {
+    private double computeUpVoteRatio(QuestionVoteSummary summary) {
         double weightedUp = summary == null ? 0.0 : summary.getWeightedUp();
         double weightedDown = summary == null ? 0.0 : summary.getWeightedDown();
 
@@ -167,7 +132,7 @@ public class BayesianNetworkUseCaseImpl implements BayesianNetworkUseCase {
      * Sugere questões para um recruiter, ordenadas pela probabilidade calculada pela rede bayesiana.
      *
      * Implementação atual:
-     * - percorre todas as questões candidatas, calcula o score (via probabilityQuestionApprovedInternal)
+     * - percorre todas as questões candidatas, calcula o score
      *   e retorna as top {@code limit} ordenadas.
      *
      * @param recruiterId id do recruiter que receberá as sugestões (não nulo)
@@ -189,7 +154,7 @@ public class BayesianNetworkUseCaseImpl implements BayesianNetworkUseCase {
 
         List<ScoredQuestion> scored = new ArrayList<>(all.size());
         for (Question q : all) {
-            double score = probabilityQuestionApprovedInternal(q, recruiterId, recruiterMap);
+            double score = scoreQuestionForRecruiter(q, recruiterId, recruiterMap);
             scored.add(new ScoredQuestion(q, score));
         }
 
@@ -198,16 +163,6 @@ public class BayesianNetworkUseCaseImpl implements BayesianNetworkUseCase {
     }
 
     // helpers
-
-    /**
-     * Retorna 0 se o Integer for nulo, caso contrário o valor.
-     *
-     * @param v valor possivelmente nulo
-     * @return inteiro não-nulo
-     */
-    private static int safeInt(Integer v) {
-        return v == null ? 0 : v;
-    }
 
     /**
      * Normaliza um inteiro no intervalo [min, max] para [0.0, 1.0] usando min-max.
@@ -220,7 +175,7 @@ public class BayesianNetworkUseCaseImpl implements BayesianNetworkUseCase {
      */
     private static double normalize(int value, int min, int max) {
         if (max <= min) return 0.0;
-        int bounded = Math.max(min, Math.min(max, value));
+        int bounded = Math.clamp(value, min, max);
         return (double) (bounded - min) / (double) (max - min);
     }
 
@@ -234,6 +189,6 @@ public class BayesianNetworkUseCaseImpl implements BayesianNetworkUseCase {
      */
     private static double safeClamp(double v, double min, double max) {
         if (Double.isNaN(v) || Double.isInfinite(v)) return min;
-        return Math.max(min, Math.min(max, v));
+        return Math.clamp(v, min, max);
     }
 }
